crates/gridwell-writer-pandoc/tests/snapshots/snapshots__multi-col-stub.snap
---
source: crates/gridwell-writer-pandoc/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [],
      []
    ],
    [
      null,
      []
    ],
    [
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Region",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "City",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Sales",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Growth",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        [
          "",
          [],
          []
        ],
        2,
        [],
        [
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "East",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "NYC",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "60",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "3%",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "West",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "LA",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "50",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "2%",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      []
    ]
  ],
  "t": "Table"
}
